# order-book-simulator

./: .gitignore  .~lock.requirements_report.docx#  CMakeLists.txt  README.md  Strategy.md  main.cpp  metrics.md  requirements_report.docx
include/: IdGenerator.h  LatencyQueue.h  MarketEngine.h  Metrics.h  Order.h  OrderBook.h  SimulationEngine.h  Strategy.h  Trade.h  TradeLog.h
src/: IdGenerator.cpp  LatencyQueue.cpp  MarketEngine.cpp  Metrics.cpp  Order.cpp  OrderBook.cpp  SimulationEngine.cpp  Strategy.cpp  Trade.cpp  TradeLog.cpp
tests/: test_latency.cpp  test_market_engine.cpp  test_metrics.cpp  test_orderbook.cpp  test_strategy.cpp
